style.css
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-regular-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-regular-webfont.woff") format("woff");
	font-stretch: normal;
	font-weight: normal;
}
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-bold-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-bold-webfont.woff") format("woff");
	font-stretch: normal;
	font-weight: bold;
}
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-condensed-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-condensed-webfont.woff") format("woff");
	font-stretch: condensed;
	font-weight: normal;
}
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-condensedbold-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-condensedbold-webfont.woff") format("woff");
	font-stretch: condensed;
	font-weight: bold;
}
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-expanded-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-expanded-webfont.woff") format("woff");
	font-stretch: expanded;
	font-weight: normal;
}
@font-face {
	font-family: "Eve Sans Neue";
	src: url("fonts/evesansneue-expandedbold-webfont.woff2") format("woff2"),
		url("fonts/evesansneue-expandedbold-webfont.woff") format("woff");
	font-stretch: expanded;
	font-weight: bold;
}

* { box-sizing: border-box; }
body {
	/* css vars, heck yeah */
	--bg-color: #183152;
	--nav-bg-color: rgba(18, 30, 50, 0.45);

	--bright-bg-color: #edf0fc;
	--lighter-bg-color: #375d81;
	--error-color: #e74c3c;
	--highlight-color: #F1C40F;

	--cancelled-bg-color: #e74c3c;
	--cancelled-border-color: #c0392b;
	--irregular-bg-color: #2ecc71;
	--irregular-border-color: #27ae60;

	background: var(--bg-color);
	color: var(--bright-bg-color);
	font-family: "Eve Sans Neue", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 12pt;
	font-stretch: normal;
	font-weight: bold;
	margin: 0;
	padding: 0;
	position: relative;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: 100%;
}

/* Class names that core.js uses to show/hide UI parts */
body[class=""] #class-list { display: flex; }

body[class$="error"] #error { display: flex; }
body[class$="error"] header a h1:before, body[class$="noscript"] header a h1:before {
	content: "Vertretungsplan";
}

body[class="holidays"] #holiday-list {
	display: flex;
}
body[class="holidays"] header a h1:before {
	content: "";
}

body[class^="page"] #table-container {
	display: block;
}

body[class~="loading"] #loading {
	display: flex;
}

/* Not elegant, but it keeps the JS nice and readable */
body[class="page0"] #table-container .week:nth-child(1) { display: flex; }
body[class="page1"] #table-container .week:nth-child(2) { display: flex; }
body[class="page2"] #table-container .week:nth-child(3) { display: flex; }

header, nav {
	position: absolute;
	position: -webkit-sticky;
	position: sticky;
	z-index: 42;
}
header a, nav a {
	color: var(--bright-bg-color);
	text-align: center;
	text-shadow: 0 1px 1px rgba(0,0,0,.5);
}

header {
	top: 0;
}
header::after {
	content: "";

	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 82px; /* header height + nav height */

	background: linear-gradient(to bottom, transparent -10%, var(--nav-bg-color) 100%);
	box-shadow: 0 0 4px rgba(0,0,0,.8);

	-webkit-backdrop-filter: blur(20px);

	z-index: -1;
}

header a h1:before {
	content: "Vertretungsplan für ";
}
header a h1 {
	font-stretch: expanded;
	height: 56px;
	line-height: 56px;
	margin: 0;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

/* Navigation bar */
nav {
	display: flex;
	height: 26px;
	line-height: 28px;
	top: 56px;
}
nav a {
	cursor: pointer;
	flex: 1 1 auto;
	font-weight: bold;
	position: relative;
	text-decoration: none;

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;

	transition: .12s ease-in-out;
	transition-property: background, color;
}
nav a:hover {
	background: var(--bright-bg-color);
	color: var(--lighter-bg-color);

	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

nav a[data-disabled=true],
body[class$="error"] nav a,
body:not([class^="page"]) #nav-previous,
body:not([class^="page"]) #nav-next,
body[class="page0"] #nav-previous,
body[class="page2"] #nav-next {
	opacity: .5;
	pointer-events: none;
}

#error, #loading, #noscript {
	align-items: center;
	color: white;
	display: none;
	flex-direction: column;
	height: 120px;
	justify-content: center;
}
#error span, #loading span, #noscript span {
	font-size: 1.5em;
	text-align: center;
	text-shadow: 0 1px 1px rgba(0,0,0,.5);
}

#error .message { font-size: 0.9em; }
#error .technical-message { font-size: 0.75em; }
#error .technical-message.active::before { content: "("; }
#error .technical-message.active::after { content: ")"; }

#noscript {
	display: flex;
}

#error, #noscript { background: var(--error-color); }
#loading { background: var(--bg-color); }

/* List of classes. Makes heavy use of display: flex; */
#class-list {
	background: var(--bright-bg-color);
	display: none; /* Overridden by body class above */
	flex-wrap: wrap;
	padding: 1px;
}
#class-list a, #holiday-list div {
	background: var(--lighter-bg-color);
	border: solid 1px var(--bg-color);
	color: var(--bright-bg-color);
	flex: 1 0 auto;
	min-height: 30px;
	line-height: 30px;
	margin: 1px;
	min-width: 64px;
	text-align: center;
	text-decoration: none;
	text-shadow: 0 0 2px rgba(0,0,0,.5), 0 2px 1px rgba(0,0,0,.5);
}
#class-list a {
	transition: .12s ease-in-out;
	transition-property: background, box-shadow, color, text-shadow;
}
#class-list a:hover, #class-list a.last-viewed {
	background: var(--bright-bg-color);
	color: var(--lighter-bg-color);
	text-shadow: 0 0 2px rgba(255,255,255,.5), 0 2px 1px rgba(255,255,255,.5);
}

#holiday-list {
	background: var(--bright-bg-color);
	display: none;
	flex-direction: column;
	font-stretch: normal;
	padding: 1px;
	text-shadow: 0 0 2px rgba(0,0,0,.5), 0 2px 1px rgba(0,0,0,.5);
}

/* Container for timetable elements */
#table-container {    
	background: var(--bright-bg-color);
	display: none;
	text-shadow: 0 0 2px rgba(0,0,0,.8), 0 2px 1px rgba(0,0,0,.5);
}

#table-container .week {
	display: none; /* Overridden by body class above */
	flex-direction: column;
	padding: 1px 2px 0 2px;
}
#table-container .week[data-visible=false] {
	display: none;
}

#table-container .week .days {
	display: flex;
	overflow-x: auto;
}

#table-container .week .days .day {
	display: flex;
	flex: 1 0 auto;
	flex-direction: column;

	font-stretch: expanded;
	
	margin: 1px 0;
	min-width: 100px;
	
	position: relative;
	
	text-align: center;
}
#table-container .week .days .day:not(:last-child) {
	margin-right: 2px;
}

#table-container .week .days .day .header {
	display: flex;
	flex-direction: column;
	justify-content: center;

	background: var(--bg-color);
	border: solid 1px rgba(0,0,0,.3);
	font-size: 0.9em;
	height: 42px;
}
#table-container .week .days .day.today .header {
	color: var(--highlight-color);
}

#table-container .week .days .day .timeunit {
	height: 42px;
	margin: 1px 0;
}

#table-container .week .days .day .timeunit.lesson {
	display: flex;
}
#table-container .week .days .day .timeunit.lesson .lesson {
	background: var(--lighter-bg-color);
	border: solid 1px var(--bg-color);
	
	display: flex;
	flex-direction: column;
	justify-content: center;
	
	flex: 1 1 auto;
	padding: 0 10px;
}
#table-container .week .days .day .timeunit.lesson .lesson:not(:first-child) {
	margin-left: 2px;
}

#table-container .week .days .day .timeunit.lesson .lesson.cancelled {
	background: var(--cancelled-bg-color);
	border-color: var(--cancelled-border-color);
}
#table-container .week .days .day .timeunit.lesson .lesson.irregular {
	background: var(--irregular-bg-color);
	border-color: var(--irregular-border-color);
}

#table-container .week .days .day .timeunit.lesson .lesson span {
	font-size: .9em;
}

#table-container .week .days .day .timeunit.free {
	visibility: hidden;
}
#table-container .week .days .day .timeunit:nth-child(2) {
	margin-top: 2px;
}

#table-container .week .days .day .timeunit.holiday {
	display: flex;
	flex: 1 0 auto;
	flex-direction: column;
	justify-content: center;
}
#table-container .week .days .day .timeunit.holiday span {
	flex: 0 1 auto;
	font-size: 1.1em;
	transform: rotate(-90deg);
}
/*#table-container .week .days .day .timeunit.holiday span:after {
	content: "Ferien";
	display: inline-block;
	transform: rotate(-90deg);
}*/

/* Timeunit/substitution headers and footers with start and end time */
#table-container .week .days .day .timeunit.time {
	border: solid 1px var(--bg-color);
	font-stretch: expanded;
	height: 24px;
	line-height: 22px;
}
#table-container .week .days .day .timeunit.time,
#table-container .week .days .day .timeunit.holiday,
#table-container .week .substitution.header.weekday {
	background: var(--lighter-bg-color) linear-gradient(-45deg, 
		rgba(24,49,82,0.6) 25%, 
		transparent 25%, 
		transparent 50%, 
		rgba(24,49,82,0.6) 50%, 
		rgba(24,49,82,0.6) 75%, 
		transparent 75%, 
		transparent);
	background-size: 4px 4px;
}

#table-container .week .substitution {
	background: var(--lighter-bg-color);
	border: solid 1px var(--bg-color);
	height: 24px;
	line-height: 23px;
	margin: 1px 1px 1px 0;
	text-align: center;
}
#table-container.noSubst .week .substitution {
	display: none;
}

#table-container .week .substitution.past {
	opacity: .75;
}
#table-container .week .substitution.header {
	background: var(--bg-color);
}
#table-container .week .substitution.header.weekday {
	position: relative;
}

/* Footer */
footer {
	background: var(--nav-bg-color);
	height: 26px;
	line-height: 26px;
	text-align: center;
}

/* Media Query overrides after this point */

/* Desktop browsers */
@media screen and (min-width: 541px) { 
	span.long { display: unset; }
	span.short { display: none; }
}

/* Shrink the header on  */
@media screen and (orientation: landscape) and (max-width: 820px), screen and (max-width: 540px) {
	header {
		height: 40px;
	}
	header::after {
		height: 66px; /* header height + nav height */
	}
	header a h1:before {
		content: "Plan für ";
	}
	header a h1 {
		font-size: 1.5em;
		font-stretch: expanded;
		line-height: 44px; /* 40px + 4px to compensate for glitches */
	}

	nav {
		top: 40px; /* override sticky top */
	}
	nav a {
		font-stretch: condensed;
		font-weight: normal;
	}
}

/* Mobile browsers/narrow windows */
@media screen and (max-width: 540px) { 
	span.long { display: none; }
	span.short { display: unset; }
	
	#error span {
		font-size: 1.3em;
	}

	#holiday-list {
		font-stretch: condensed;
		font-weight: normal;
	}
	
	#table-container .week .days .day .header,
	#table-container .week .days .day .timeunit.time,
	#table-container .week .substitution.header {
		font-size: 0.9em;
		font-stretch: expanded;
		font-weight: bold;
	}
	
	#table-container .week .days .day .timeunit {
		height: 36px;
		margin: 1px 0;
	}
	
	#table-container .week .days .day .timeunit.time {
		height: 22px;
		line-height: 21.5px;
	}

	#table-container .week .days .day .timeunit.lesson .lesson span {	
		font-size: .8em;
		font-weight: bold;
	}

	#table-container .week .substitution:not(.header) {
		font-size: .9em;
	}

	footer {
		font-weight: normal;
		font-stretch: condensed;
	}
}

